change index title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: DevOps & SRE
-subtitle: Lessons learned and solutions about DevOps/SRE shared by Vu Nguyen
+title: DevOps | SRE | Security
+subtitle: Vu Nguyen's daily Security|DevOps|SRE work life and shit.
 ---
