--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: DevOps | SRE | Security
-subtitle: Vu Nguyen's daily Security|DevOps|SRE work life and shit.
+title: <>
+subtitle: Vu Nguyen's daily SRE|Security work life and shit.
 ---
