update about me

--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 layout: page
-title: "About Me"
+title: About me
+subtitle: Are you a Linux, Perf, Security, or Computer System-holic?
 ---
-<div class="w-100">
-	<p>👾 Condimentum natoque sagittis scelerisque a morbi tristique adipiscing adipiscing adipiscing consectetur vehicula feugiat a ac sit aenean eleifend.Blandit parturient lacus nam nibh vestibulum adipiscing vestibulum a a bibendum vivamus volutpat molestie ultrices aptent nisi potenti dictumst vestibulum curabitur sapien.Curae praesent sodales erat ullamcorper adipiscing ac consectetur sit placerat condimentum lobortis hac sed.</p>
-</div>
+I’m Vu - a curious SRE who loves diving deep into Linux internals, performance tuning, and eBPF magic. Most of my time is spent exploring how systems behave under pressure (and occasionally, why they break).
+This blog is my little corner of the internet where I share notes, experiments, and lessons learned from my daily work in reliability, observability, and performance.
+Besides SRE life, I’m also passionate about Security and Exploitation research - with some past experience building threat intelligence platforms and playing around with low-level systems.
+You’ll find a mix of serious tech deep dives, casual thoughts, and maybe a few rants. I write freely here - no strict formats, no corporate tone - just honest experience from the trenches.
